--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-flask==1.1.2
+flask
 gunicorn==20.0.4
-jinja2==2.11.3
+Flask-APScheduler
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
