--- a/app/assets/configuration.json
+++ b/app/assets/configuration.json
@@ -1,4 +1,6 @@
 {
+	"SITE_ADDRESS" : "betting.app",
+	"CERT_EMAIL" : "email@betting.app",
 	"SUPPORTED_LANGUAGES" : {"en" : ["English", "Angol"], "hu" : ["Hungarian", "Magyar"]},
 	"SECRET_KEY" : "dev",
 	"UPLOAD_FOLDER" : "upload",
@@ -10,7 +12,7 @@
 	"SQLALCHEMY_DATABASE_URI" : "sqlite:///flaskr.sqlite",
 	"MATCH_URL" : "https://path.fixture",
 
-	"BABEL_TRANSLATION_DIRECTORIES" : "./resources/translations",
+	"BABEL_TRANSLATION_DIRECTORIES" : "./assets/translations",
 
 	"IDENT_URL" : "https://www.gravatar.com/avatar/{email_hash}?d=identicon&s=128",
 
